--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.rajendra.bhajanaarti"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 15
         versionName "2.0.5"
@@ -22,7 +22,6 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.google.firebase:firebase-messaging:17.6.0'
     implementation 'com.google.firebase:firebase-config:16.5.0'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -34,7 +33,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.firebase:firebase-ads:17.2.0'
     implementation 'com.google.firebase:firebase-core:16.0.8'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
     implementation 'com.google.firebase:firebase-messaging:17.6.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.0'
     testImplementation 'junit:junit:4.12'
 }
