--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
-
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".activities.MyApplication"
@@ -19,10 +18,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.ShowAartiActivity"
+            android:label="Hindi Aarti"/>
 
         <uses-library
             android:name="org.apache.http.legacy"
-            android:required="false"/>
+            android:required="false" />
 
         <activity
             android:name=".SplashScreenActivity"
@@ -39,13 +40,14 @@
             android:value="true" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/admob_app_id"/>
+            android:value="@string/admob_app_id" />
         <meta-data
             android:name="com.google.android.gms.ads.AD_MANAGER_APP"
-            android:value="true"/>
+            android:value="true" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
         <receiver
             android:name="com.google.android.gms.analytics.AnalyticsReceiver"
             android:enabled="true">
@@ -66,14 +68,15 @@
             android:name="com.google.android.gms.analytics.AnalyticsService"
             android:enabled="true"
             android:exported="false" />
-        <service android:name=".firebase.MyFirebaseMsgService"
+        <service
+            android:name=".firebase.MyFirebaseMsgService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <receiver android:name=".broadcastReceiver.PhoneCallStateReceiver" >
+        <receiver android:name=".broadcastReceiver.PhoneCallStateReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
@@ -93,16 +96,14 @@
         <activity
             android:name=".activities.FeedbackActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
-        <!-- Include the AdActivity configChanges and theme. -->
+            android:windowSoftInputMode="adjustPan" /> <!-- Include the AdActivity configChanges and theme. -->
         <activity
             android:name=".activities.Written_Aarti"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.Written_Aarti_Text"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:name=".Adapters.Written_Aarti_Adapter"/>
+            android:screenOrientation="portrait" />
+        <activity android:name=".Adapters.Written_Aarti_Adapter" />
     </application>
 
 </manifest>
