--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.ShowAartiActivity"
-            android:label="Hindi Aarti"/>
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -89,14 +87,18 @@
         <activity
             android:name=".activities.HomeActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.MusicPlayerActivity"
             android:screenOrientation="portrait" />
+
+        <activity android:name=".activities.ShowAartiActivity"/>
+
         <activity
             android:name=".activities.FeedbackActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" /> <!-- Include the AdActivity configChanges and theme. -->
+            android:windowSoftInputMode="adjustPan"/> <!-- Include the AdActivity configChanges and theme. -->
         <activity
             android:name=".activities.Written_Aarti"
             android:screenOrientation="portrait" />
