--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,19 +93,9 @@
             android:name=".activities.MusicPlayerActivity"
             android:screenOrientation="portrait" />
 
-        <activity android:name=".activities.ShowAartiActivity"/>
+        <activity android:name=".activities.ShowAartiActivity"
+            android:screenOrientation="portrait"/>
 
-        <activity
-            android:name=".activities.FeedbackActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/> <!-- Include the AdActivity configChanges and theme. -->
-        <activity
-            android:name=".activities.Written_Aarti"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".activities.Written_Aarti_Text"
-            android:screenOrientation="portrait" />
-        <activity android:name=".Adapters.Written_Aarti_Adapter" />
     </application>
 
 </manifest>
