1. Restructured code compileSdkVersion 31 minSdkVersion 21 targetSdkVersion 31
2. Upgraded the build.gradle
3. Upgraded kotlin version to 1.8.10
4. Upgraded google play services 4.3.15

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
 
         <activity
             android:name=".SplashScreenActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -48,7 +49,8 @@
 
         <receiver
             android:name="com.google.android.gms.analytics.AnalyticsReceiver"
-            android:enabled="true">
+            android:enabled="true"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.analytics.ANALYTICS_DISPATCH" />
             </intent-filter>
@@ -74,7 +76,8 @@
             </intent-filter>
         </service>
 
-        <receiver android:name=".broadcastReceiver.PhoneCallStateReceiver">
+        <receiver android:name=".broadcastReceiver.PhoneCallStateReceiver"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
