--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.0'
     implementation 'com.android.support:multidex:2.0.1'
     testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1"
 }
 repositories {
     mavenCentral()
